<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/patient_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color_for_pages">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="205dp"
        android:background="@drawable/doctor_page_relative_layout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/welcome_doctor"
            style="@style/WelcomeDoctor"
            android:layout_width="228dp"
            android:layout_height="43dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="116dp"
            android:layout_marginTop="67dp"
            android:layout_marginEnd="65dp"
            android:gravity="center"
            android:text="@string/welcome_user"
            android:textSize="@dimen/welcome_home" />

        <TextView
            android:id="@+id/how_can"
            style="@style/WelcomeDoctor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/welcome_doctor"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="151dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="73dp"
            android:gravity="center"
            android:text="@string/choose_option"
            android:textSize="@dimen/how_can_i" />


    </RelativeLayout>

    <Button
        android:id="@id/appointments"
        style="@style/DoctorBotton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="92dp"
        android:background="@drawable/doctor_botton_state"
        android:backgroundTint="@null"
        android:gravity="center|bottom"
        android:text="@string/appointment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/profile"
        style="@style/DoctorBotton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/doctor_botton_state"
        android:gravity="center|bottom"
        android:text="@string/profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appointments" />

    <Button
        android:id="@+id/search"
        style="@style/DoctorBotton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/doctor_botton_state"
        android:gravity="center|bottom"
        android:text="@string/search"
        app:layout_constraintBaseline_toBaselineOf="@+id/profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toEndOf="@+id/profile" />

    <Button
        android:id="@+id/signout_button"
        style="@style/DoctorBotton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:background="@drawable/custom_botton_state"
        android:text="@string/signout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button"
        style="@style/DoctorBotton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/doctor_botton_state"
        android:gravity="center|bottom"
        android:text="@string/my_doctors"
        app:layout_constraintBaseline_toBaselineOf="@+id/appointments"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/appointments" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="49dp"
        android:layout_height="42dp"
        app:layout_constraintBottom_toBottomOf="@+id/appointments"
        app:layout_constraintEnd_toEndOf="@+id/appointments"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="@+id/appointments"
        app:layout_constraintTop_toTopOf="@+id/appointments"
        app:layout_constraintVertical_bias="0.189"
        app:srcCompat="@drawable/appointment" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="49dp"
        android:layout_height="42dp"
        app:layout_constraintBottom_toBottomOf="@+id/button"
        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/button"
        app:layout_constraintTop_toTopOf="@+id/button"
        app:layout_constraintVertical_bias="0.189"
        app:srcCompat="@drawable/patient_request" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="49dp"
        android:layout_height="42dp"
        app:layout_constraintBottom_toBottomOf="@+id/profile"
        app:layout_constraintEnd_toEndOf="@+id/profile"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="@+id/profile"
        app:layout_constraintTop_toTopOf="@+id/profile"
        app:layout_constraintVertical_bias="0.362"
        app:srcCompat="@drawable/profile" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="49dp"
        android:layout_height="42dp"
        app:layout_constraintBottom_toBottomOf="@+id/search"
        app:layout_constraintEnd_toEndOf="@+id/search"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/search"
        app:layout_constraintTop_toTopOf="@+id/search"
        app:layout_constraintVertical_bias="0.362"
        app:srcCompat="@drawable/search" />


</androidx.constraintlayout.widget.ConstraintLayout>