<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/doctor_activity"
    android:background="@color/background_color_for_pages">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="205dp"
        android:background="@drawable/doctor_page_relative_layout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/welcome_doctor"
            style="@style/WelcomeDoctor"
            android:layout_width="228dp"
            android:layout_height="43dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="93dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="89dp"
            android:gravity="center"
            android:text="@string/welcome_doctor"
            android:textSize="@dimen/welcome_home" />

        <TextView
            android:id="@+id/how_can"
            style="@style/WelcomeDoctor"
            android:layout_width="206dp"
            android:layout_height="52dp"
            android:layout_below="@+id/welcome_doctor"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="99dp"
            android:layout_marginTop="-13dp"
            android:layout_marginEnd="106dp"
            android:gravity="center"
            android:text="@string/how_can"
            android:textSize="@dimen/how_can_i" />


    </RelativeLayout>

    <Button
        android:id="@id/patients"
        style="@style/DoctorBotton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="96dp"
        android:background="@drawable/doctor_botton_state"
        android:gravity="bottom|center"
        android:padding="20dp"
        android:text="@string/my_patients"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/patient_request"
        style="@style/DoctorBotton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="80dp"
        android:background="@drawable/doctor_botton_state"
        android:gravity="bottom|center"
        android:padding="20dp"
        android:text="@string/patient_request"
        app:layout_constraintBaseline_toBaselineOf="@+id/patients"
        app:layout_constraintStart_toEndOf="@+id/patients"
        tools:ignore="InvalidId" />

    <Button
        android:id="@+id/profile"
        style="@style/DoctorBotton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/doctor_botton_state"
        android:gravity="bottom|center"
        android:padding="20dp"
        android:text="@string/profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/patients"
        app:layout_constraintVertical_bias="0.011" />

    <Button
        android:id="@+id/calendar"
        style="@style/DoctorBotton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/doctor_botton_state"
        android:gravity="bottom|center"
        android:padding="20dp"
        android:text="@string/calendar"
        app:layout_constraintBaseline_toBaselineOf="@+id/profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.559"
        app:layout_constraintStart_toEndOf="@+id/profile" />

    <Button
        android:id="@+id/signout_button"
        style="@style/DoctorBotton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:background="@drawable/custom_botton_state"
        android:text="@string/signout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendar"
        app:layout_constraintVertical_bias="0.434" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="57dp"
        android:layout_height="44dp"
        android:elevation="19dp"
        app:layout_constraintBottom_toBottomOf="@+id/calendar"
        app:layout_constraintEnd_toEndOf="@+id/calendar"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="@+id/calendar"
        app:layout_constraintTop_toTopOf="@+id/calendar"
        app:layout_constraintVertical_bias="0.24000001"
        app:srcCompat="@drawable/calendar" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="49dp"
        android:layout_height="42dp"
        android:elevation="19dp"
        app:layout_constraintBottom_toBottomOf="@+id/patients"
        app:layout_constraintEnd_toEndOf="@+id/patients"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="@+id/patients"
        app:layout_constraintTop_toTopOf="@+id/patients"
        app:layout_constraintVertical_bias="0.060000002"
        app:srcCompat="@drawable/person" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="55dp"
        android:layout_height="48dp"
        android:elevation="19dp"
        app:layout_constraintBottom_toBottomOf="@+id/patient_request"
        app:layout_constraintEnd_toEndOf="@+id/patient_request"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="@+id/patient_request"
        app:layout_constraintTop_toTopOf="@+id/patient_request"
        app:layout_constraintVertical_bias="0.060000002"
        app:srcCompat="@drawable/patient_request" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="57dp"
        android:layout_height="44dp"
        android:elevation="19dp"
        app:layout_constraintBottom_toBottomOf="@+id/profile"
        app:layout_constraintEnd_toEndOf="@+id/profile"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="@+id/profile"
        app:layout_constraintTop_toTopOf="@+id/profile"
        app:layout_constraintVertical_bias="0.24000001"
        app:srcCompat="@drawable/profile" />


</androidx.constraintlayout.widget.ConstraintLayout>